--- a/templates/details.html
+++ b/templates/details.html
@@ -6,11 +6,11 @@
 {% block meta %}
     <meta name="Keywords" content="{{resource.tags.all|join:', '}}" />
     <meta name="Description" content="{{resource.short_description}}" />
-    <link rel="canonical" href="http://www.opendataphilly.org{{SITE_ROOT}}{{resource.get_absolute_url}}" />
+    <link rel="canonical" href="http://api.chattablocks.com{{SITE_ROOT}}{{resource.get_absolute_url}}" />
     {% if resource.get_images %}
-    <link rel="image_src" href="http://www.opendataphilly.org{{SITE_ROOT}}{% thumbnail resource.get_images.0 218x273 %}"/>
+    <link rel="image_src" href="http://api.chattablocks.com{{SITE_ROOT}}{% thumbnail resource.get_images.0 218x273 %}"/>
     {% else %}
-    <link rel="image_src" href="http://www.opendataphilly.org{{SITE_ROOT}}/static/images/logo.png"/>
+    <link rel="image_src" href="http://api.chattablocks.com{{SITE_ROOT}}/static/images/logo.png"/>
     {% endif %}
 
 {% endblock %}
