--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
   <a href="{{SITE_ROOT}}{{idea.get_absolute_url}}">{{idea.title}}</a> by {{idea.author}}
 </div>
 <div id="home_twitter">
-<h2 class="grid"><a href="http://twitter.com/opendataphilly" target="_blank"><span class="icon_twitter"></span>@OpenDataPhilly</a></h2>
+<h2 class="grid"><a href="http://twitter.com/createhere" target="_blank"><span class="icon_twitter"></span>@CreateHere</a></h2>
 
 <ul id="home_twitter_feed">
   {% for tweet in tweets %}
