--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -16,7 +16,7 @@
 <h2 id="description"></h2>
 
       <div class="resource">
-        <div class="resource error_message">Your activation link has expired. Please contact info@opendataphilly.org if you would still like this account.</div>
+        <div class="resource error_message">Your activation link has expired. Please contact info@openchattanooga.org if you would still like this account.</div>
       </div>
 
 {% endblock %}
