--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 <div id="left_container">
 
-<a href="{{SITE_ROOT}}/" id="logo">Site Logo</a>
+<a href="{{SITE_ROOT}}/" id="logo"><img src="/media/images/logo.jpg" width="180"></a>
 
 <div id="tags">
 	<h2 class="grid">Data</h2>
