--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,12 @@
 			<script type="text/javascript" src="/static/StarRating/jquery.rating.js"></script>
 			<script type="text/javascript" src="/static/jquery.query-2.1.7.js"></script>
 			<script type="text/javascript" src="/static/odp.js"></script>
-      <!-- TYPEKIT -->
-      <script type="text/javascript" src="http://use.typekit.com/nni2gly.js"></script>
-      <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
+      
 			<link rel="stylesheet" href="/static/reset.css" type="text/css"/>
 			<link rel="stylesheet" href="/static/StarRating/jquery.rating.css" type="text/css"/>
       <link rel="stylesheet" href="/static/jQueryUI/css/jquery.ui.base.css" type="text/css"/>
       <link rel="stylesheet" href="/static/odp.css" type="text/css"/>
+      <link rel="stylesheet" href="/media/css/site.css" type="text/css"/>
 
             <script type="text/javascript">
                 odp.site_root = "{{SITE_ROOT}}";    
