--- a/templates/template_home.html
+++ b/templates/template_home.html
@@ -16,9 +16,9 @@
 	<div id="center_container" class="home">
 {% include "loginlogout.html" %}
 
-    <h1>Site Header</h1>
+    <h1>Open Chattanooga</h1>
     <h2>
-		With some description here.
+		Liberating Chattanooga's Data.
     </h2>
 
     {% include "searchbar.html" %}
