--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,7 @@
-	<div id="footer">
-		<a href="#" id="footer_logo">Created By</a>
-		<div id="footer_copyright">Copyright Text<br> All Rights Reserved. test<a href="{{SITE_ROOT}}/terms">Terms of Use.</a></div>
-	</div>
+	<footer id="footer" class="main">
+	    <div class="footer-left">
+		    {% include "nav-pages.html" %}
+			<div class="copyright">&copy; Copyright 2011 Open Chattanooga<br />All Rights Reserved.</div>
+		</div>
+		<h4><a href="{{SITE_ROOT}}">Open Chattanooga</a></h4>
+	</footer>
