--- a/templates/searchbar.html
+++ b/templates/searchbar.html
@@ -1,10 +1,9 @@
-    <div id="center_header">
-      <div id="search">
-				<form method="GET" id="search_form" >
-					<div id="search_qs">
-						<input type="text" id="qs" value="Search for data" />
-					</div>
-				</form>
-				<div id="search_img"></div>
-			</div>
-    </div>
+<div id="search">
+	<form method="GET" id="search_form" >
+		<div id="search_qs">
+			<input type="search" id="qs" value="Search for data" />
+			<input type="image" id="submit" src="{{SITE_ROOT}}/media/images/search-icon.gif" alt="search" />
+		</div>
+	</form>
+</div>
+	
