--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
       <link rel="stylesheet" href="/static/jQueryUI/css/jquery.ui.base.css" type="text/css"/>
       <link rel="stylesheet" href="/static/odp.css" type="text/css"/>
       <link rel="stylesheet" href="/media/css/site.css" type="text/css"/>
+      <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
 
             <script type="text/javascript">
                 odp.site_root = "{{SITE_ROOT}}";    
@@ -30,18 +31,18 @@
 
 			{% block bottomhead %}
 			{% endblock %}
-			
+
             <script type="text/javascript">
 
               var _gaq = _gaq || [];
-              //_gaq.push(['_setAccount', 'UA-XXXXXXXXX']);
-              //_gaq.push(['_trackPageview']);
+              _gaq.push(['_setAccount', 'UA-27008672-1']);
+              _gaq.push(['_trackPageview']);
 
-              //(function() {
-              //  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-              //  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-              //  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-              //})();
+              (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+              })();
 
             </script>
 
@@ -49,14 +50,17 @@
 
 	<body {% block body_load %}{% endblock %} {% block body_id %}{% endblock %} class="{% block body_class %}base_body{% endblock %}">
         {% block body_top %} {% endblock %}
+  {% include "header.html" %}
+        
     	<div id="wrapper">
-
+			<section class="main">
     		{% block content %}
 		    	main content goes here
             {% endblock %}
-
+			</section>
     	</div>
 
+  {% include "footer.html" %}
 
 
 	{% block endpage %}
