--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -13,9 +13,9 @@
 {% endblock %}
 
 {% block center_container %}
-<h1 id="title">{{ flatpage.title }}</h1>
-<h2 id="description"></h2>
-<div class="resource flatpage">
+<h1>{{ flatpage.title }}</h1>
+<h2></h2>
+<div class="resource flatpage blocked-lite">
 {{flatpage.content}}
 </div>
 
