--- a/templates/ideas.html
+++ b/templates/ideas.html
@@ -21,14 +21,14 @@
 
 	<div id="idea_header">
 		<h1 id="header_title">Idea Gallery</h1>
-		<h2 id="header_description">
+		<div id="header_description">
 			Data on its own is not as helpful as it could be. To be truly useful, data needs to be sorted, analyzed, and
 				transformed in new applications, visualizations, and stories. The Idea Gallery features
 				some of the most engaging and interesting uses of open data. If you have created a beautiful visualization or 
                 have used data in other inspiring ways and you think it's worth sharing with others in the 
                 Idea Gallery, let us know at <a target="_blank" href="mailto:info@somewhere.com">info@somewhere.com</a>.
 
-		</h2>
+		</div>
 	</div>
 {% autopaginate ideas 3 %}
 	<div id="idea_list">
