--- a/templates/suggestions/list.html
+++ b/templates/suggestions/list.html
@@ -18,13 +18,13 @@
 
 {% block center_container %}
 	<h1 id="title">Nominate Data</h1>
-	<h2 id="description">Do you want to see data on particular topic? We realize that this site does not contain links to
+	<p class="capitalize">Do you want to see data on particular topic? We realize that this site does not contain links to
 		every available data resource - often because open data might not be available. Add a nomination for a
 		type of data and vote on other nominations. Together, let's build a list of areas where we'd like to see
 		increased availability of open data.
 		<br/><br/>
 		This page is for suggesting general areas where you'd like to see more open data. If you have a specific
-		data set to add, visit the <a href="{{SITE_ROOT}}/opendata/submit/" >Submit Data</a> page .</h2>
+		data set to add, visit the <a href="{{SITE_ROOT}}/opendata/submit/" >Submit Data</a> page .</p>
 
 
 	<div id="form_container" class="nomination_form">
